# fastapi-postgres-homelab

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yml  pyproject.toml
api/: main.py
api/api/: deps.py
api/core/: config.py  keycloak.py
api/db/: session.py
api/db/crud/: base.py
app/: config.py  main.py
monitoring/grafana/: config.monitoring  grafana.db
monitoring/prometheus/: prometheus.yml
tests/: test_project.py
