[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "big_fast_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.99.1"}
prometheus-fastapi-instrumentator = "^6.0.0"
fastapi-azure-auth = "^4.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
black = "23.3.0"
pytest = "^7.4.0"

[pyplater.scripts]
api = "poetry run uvicorn app.main:app --reload"
test = "poetry run python -m pytest tests"
lint = "poetry run flake8"
format = "poetry run black . -v"
install = "poetry install"
install-dev = "poetry install group -dev"